--- a/static/css/webapp.css
+++ b/static/css/webapp.css
@@ -103,11 +103,11 @@ img{max-width: 100%}
 
 @font-face {
   font-family: 'l-iconfont';  /* project id 207792 */
-  src: url('//at.alicdn.com/t/font_x021hrny0lmu0udi.eot');
-  src: url('//at.alicdn.com/t/font_x021hrny0lmu0udi.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_x021hrny0lmu0udi.woff') format('woff'),
-  url('//at.alicdn.com/t/font_x021hrny0lmu0udi.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_x021hrny0lmu0udi.svg#l-iconfont') format('svg');
+  src: url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.eot');
+  src: url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.eot?#iefix') format('embedded-opentype'),
+  url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.woff') format('woff'),
+  url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.ttf') format('truetype'),
+  url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.svg#l-iconfont') format('svg');
 }
 .l-icon{
   font-family: 'l-iconfont' !important;
