--- a/static/css/webapp.css
+++ b/static/css/webapp.css
@@ -103,11 +103,11 @@ img{max-width: 100%}
 
 @font-face {
   font-family: 'l-iconfont';  /* project id 207792 */
-  src: url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.eot');
-  src: url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.eot?#iefix') format('embedded-opentype'),
-  url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.woff') format('woff'),
-  url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.ttf') format('truetype'),
-  url('http://at.alicdn.com/t/font_x021hrny0lmu0udi.svg#l-iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_r39up6ark9pmn29.eot');
+  src: url('//at.alicdn.com/t/font_r39up6ark9pmn29.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_r39up6ark9pmn29.woff') format('woff'),
+  url('//at.alicdn.com/t/font_r39up6ark9pmn29.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_r39up6ark9pmn29.svg#l-iconfont') format('svg');
 }
 .l-icon{
   font-family: 'l-iconfont' !important;
@@ -130,7 +130,6 @@ img{max-width: 100%}
   background-color: #0894ec;
 }
 .l-icon-fill-wx{background-color: #24b70f;}
-
 
 /* vue style */
 [v-cloak]{display: none;}
@@ -172,11 +171,13 @@ img{max-width: 100%}
 }
 
 /* ios标准字体：黑体简 34px 28px 20px */
+.l-fs-l{font-size: 1rem}
 .l-fs{font-size: 0.85rem}
 .l-fs-s{font-size: 0.7rem}
 .l-fs-sm{font-size: 0.5rem}
-.l-text-gray{color: #999;}
-.l-text-warn{color: #ff9100;}
+.l-text-gray{color: #999 !important;}
+.l-text-warn{color: #ff9100 !important;}
+.l-text-error{color: #ff2828 !important;}
 .l-border-t, .l-border-b, .l-border-l, .l-border-r{ position: relative; }
 .l-border-t:before, .l-border-b:after,
 .l-border-l:before, .l-border-r:after{
@@ -225,6 +226,9 @@ img{max-width: 100%}
 .l-margin-b{margin-bottom: 0.75rem;}
 .l-margin-l{margin-left: 0.75rem;}
 .l-margin-r{margin-right: 0.75rem;}
+.l-margin-r-s{margin-right: 0.533333rem;}
+.l-margin-r-sm{margin-right: 0.4rem;}
+.l-center{text-align: center;}
 
 table[class*='l-table']{width: 100%;}
 table[class*='l-table'] th,
@@ -412,6 +416,15 @@ div.l-table-tr.l-border-b{padding-bottom: 0.375rem; margin-bottom: 0.375rem;}
 }
 .l-evaluate-score{margin-top: 0.375rem;}
 .l-evaluate-score .l-icon{ font-size: 1rem; vertical-align: middle; margin-right: 5px;}
+/* 动态 */
+.l-panel-carinfo{height: 7.466667rem; color: #fff; overflow: hidden; }
+.l-panel-carinfo h3,
+.l-panel-carinfo p{font-weight: 400; margin:0; }
+.l-panel-carinfo .l-thumb{width: 2.133333rem; height: 2.133333rem; border-radius: 50%; background-color: #fff; }
+.l-panel-carinfo-item{border:1px solid rgba(255, 255, 255, 0.5); padding: 0.266667rem 0.4rem; }
+.l-panel-carinfo-item img{margin-right: 0.4rem; width: 2.4rem; height: 1.866667rem; }
+
+
 
 
 
