--- a/static/css/webapp.css
+++ b/static/css/webapp.css
@@ -1,5 +1,5 @@
 @charset 'utf-8';
-html,body{background: #ebebeb; cursor: default; color: #333;height: 100%; overflow: hidden;}
+html,body{background: #f3f3f3; cursor: default; color: #333;height: 100%; overflow: hidden;}
 i{font-style: normal;}
 img{max-width: 100%}
 @media screen and (max-width: 319px) {
@@ -177,7 +177,10 @@ img{max-width: 100%}
 .l-fs-sm{font-size: 0.5rem}
 .l-text-gray{color: #999 !important;}
 .l-text-warn{color: #ff9100 !important;}
+.l-text-ok{color: #66c214 !important;}
 .l-text-error{color: #ff2828 !important;}
+.l-text-right{text-align: right;}
+.l-border{border: 1px solid rgba(255, 255, 255, 0.5);}
 .l-border-t, .l-border-b, .l-border-l, .l-border-r{ position: relative; }
 .l-border-t:before, .l-border-b:after,
 .l-border-l:before, .l-border-r:after{
@@ -220,6 +223,9 @@ img{max-width: 100%}
 .l-layer .l-close-radius{color: #fff;opacity: 0.6;}
 .l-layer .l-close-radius:active{opacity: 1;}
 .l-padding{padding:0.75rem;}
+.l-margin-0{margin:0;}
+.l-margin-s{margin:0.375rem;}
+.l-margin-sm{margin: 0.25rem;}
 .l-margin{margin:0.75rem;}
 .l-margin-tb{margin-top: 0.75rem;margin-bottom: 0.75rem;}
 .l-margin-t{margin-top: 0.75rem;}
@@ -423,11 +429,32 @@ div.l-table-tr.l-border-b{padding-bottom: 0.375rem; margin-bottom: 0.375rem;}
 .l-panel-carinfo .l-thumb{width: 2.133333rem; height: 2.133333rem; border-radius: 50%; background-color: #fff; }
 .l-panel-carinfo-item{border:1px solid rgba(255, 255, 255, 0.5); padding: 0.266667rem 0.4rem; }
 .l-panel-carinfo-item img{margin-right: 0.4rem; width: 2.4rem; height: 1.866667rem; }
-
-
-
-
-
-
-
-
+.l-panel-technician{ height: 7.466667rem; color: #fff; overflow: hidden; }
+.l-technician-work{background-color: #fff;}
+.l-technician-work .l-title{padding: 0.375rem 0;text-align: center;font-size: 1.0rem;}
+.l-technician-work .l-title .l-img-icon{height: 1.25rem; vertical-align: -5px;}
+.l-technician-work .list-block{margin-top:0}
+.l-technician-suggest ul{margin-top:0;}
+.l-technician-suggest ul li{padding: 0.75rem 0.75rem 0.75rem 0;color: #ff9100;}
+.l-technician-suggest ul li p{margin:0; color: #333;}
+.l-technician-suggest ul li:first-child:before{visibility: hidden;}
+.l-check-result ul{margin-top:0;padding: 0; font-size: 0.85rem;}
+.l-check-result h4{margin:0;}
+.l-check-result p{margin:0;}
+.l-check-result ul li{padding: 0.75rem;}
+.l-check-result ul li:first-child:before{visibility: hidden;}
+.l-check-result .l-img-list{margin-top: -0.25rem;}
+.l-check-result .l-img-list img{margin: 0.375rem 0.375rem 0 0; width: 4.5rem;height: 3.5rem;}
+.l-check-all .l-technician-work{background:#fff no-repeat 50% 0; background-size: 100%;}
+.l-check-all .l-check-item-name{position: relative;padding-right: 1.0rem;}
+.l-check-all .l-check-item-desc{display: none;}
+.l-check-all .l-check-item-name:after{
+  content: ''; width: 0.75rem;
+  position: absolute; top:-1px; right:-0.25rem; bottom:0; 
+  background: url('../images/arrow.png') no-repeat 100% center;
+  background-size: 0.7rem;
+}
+.l-check-expand .l-check-item-name:after{
+  -webkit-transform: rotate(90deg);transform: rotate(90deg);
+}
+.l-check-expand .l-check-item-desc{display: block;}
