--- a/static/css/webapp.css
+++ b/static/css/webapp.css
@@ -101,13 +101,39 @@ img{max-width: 100%}
   -webkit-line-clamp: 2;
 }
 
+.l-toptip {
+  position: fixed;
+  top: 0;
+  text-align: center;
+  color: #fff;
+  z-index: 2000;
+  background-color: #e64340;
+  padding: 0.5rem;
+  right: 0;
+  left:0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+.l-toptip.l-show{
+  -webkit-transform: translateY(0); 
+  transform: translateY(0); 
+}
+.l-toptip.l-error{
+  background-color: #e64340;
+}
+.l-toptip.l-warn{
+  background-color: #e96900; 
+}
+
 @font-face {
   font-family: 'l-iconfont';  /* project id 207792 */
-  src: url('//at.alicdn.com/t/font_r39up6ark9pmn29.eot');
-  src: url('//at.alicdn.com/t/font_r39up6ark9pmn29.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_r39up6ark9pmn29.woff') format('woff'),
-  url('//at.alicdn.com/t/font_r39up6ark9pmn29.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_r39up6ark9pmn29.svg#l-iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_8z0uqjnsm7ca0pb9.eot');
+  src: url('//at.alicdn.com/t/font_8z0uqjnsm7ca0pb9.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_8z0uqjnsm7ca0pb9.woff') format('woff'),
+  url('//at.alicdn.com/t/font_8z0uqjnsm7ca0pb9.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_8z0uqjnsm7ca0pb9.svg#l-iconfont') format('svg');
 }
 .l-icon{
   font-family: 'l-iconfont' !important;
@@ -458,3 +484,23 @@ div.l-table-tr.l-border-b{padding-bottom: 0.375rem; margin-bottom: 0.375rem;}
   -webkit-transform: rotate(90deg);transform: rotate(90deg);
 }
 .l-check-expand .l-check-item-desc{display: block;}
+
+/* 登录 */
+.l-login{height: 100%;text-align: center;color: #fff;}
+.l-login .l-avatar{
+  width: 4.0rem; height: 4.0rem; margin:2.0rem auto;
+  border-color: rgba(255,255,255, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.l-login-form{width: 17.5rem;margin:auto;}
+.l-login-ipt{
+  margin: 0.75rem; padding: 0.375rem;
+  background-color: rgba(0,0,0,0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5)
+}
+.l-login-ipt input{
+  border:none;background:none;width: 100%;
+  height: 1.5rem; line-height: 1.5rem;
+}
+.l-login-ipt .button{margin:-0.75rem -0.25rem -0.75rem 0;width: 5.25rem;}
+.l-login-ipt .l-icon{color: #0894ec; font-size: 1rem;width: 1.5rem; }
