--- a/static/css/webapp.css
+++ b/static/css/webapp.css
@@ -241,7 +241,7 @@ img{max-width: 100%}
 .l-border-l:before{ top:0; left: 0; }
 .l-border-r:after{ top:0; right: -1px; }
 
-
+.button{min-width: 2.5rem;}
 .button.l-btn-s{border-radius: 0; height: 1.5rem;line-height: 1.5rem;}
 .button.l-btn{border-radius: 0; height: 2.2rem;line-height: 2.2rem; font-size: 0.85rem;}
 .button.l-btn-gray{background-color:#ebebeb; color: inherit;}
@@ -269,6 +269,7 @@ img{max-width: 100%}
   position: absolute;top:0;left:0;right:0;bottom: 0; z-index: -1;
   background-color: rgba(0, 0, 0, 0.6);
 }
+.button.l-inline{display: inline-block;}
 .l-close-radius{font-size: 2.0rem}
 .l-layer .l-close-radius{color: #fff;opacity: 0.6;}
 .l-layer .l-close-radius:active{opacity: 1;}
@@ -347,6 +348,7 @@ div.l-table-tr.l-border-b{padding-bottom: 0.375rem; margin-bottom: 0.375rem;}
 .modal-inner:after,.modal-button:after{background-color: #d7d7d7}
 .modal-title{color: #000;}
 .modal-title~.modal-text{color: #666;font-size: 0.75rem;}
+.picker-modal .bar:before{background-color: #d7d7d7;}
 /*个人中心*/
 .l-panel-user{position:relative; z-index:0; height: 9.0rem; padding-top: 0.75rem;margin-top: -0.75rem;}
 .l-panel-user:before{
@@ -456,7 +458,7 @@ div.l-table-tr.l-border-b{padding-bottom: 0.375rem; margin-bottom: 0.375rem;}
 .l-store-item-bd .l-thumb{width: 3rem;height: 3rem; margin-right: 0.75rem;border-radius: 3px;}
 .l-store-item-bd .l-flex-v{padding: 0.25rem 0;}
 .l-store-item-bd h4{margin:0;font-weight: 400; font-size: 0.75rem;}
-.l-store-item-bd p{margin:0; font-size: 0.6rem;}
+.l-store-item-bd p{margin:0; font-size: 0.7rem;}
 .l-store-item-ft{height: 1.75rem;background-color: #fff;}
 .l-store-item-ft>.l-rest{width: 50%; height: 100%; text-align: center;}
 .l-store-item-ft>.l-rest:active{background-color: #f3f3f3;}
@@ -535,9 +537,11 @@ div.l-table-tr.l-border-b{padding-bottom: 0.375rem; margin-bottom: 0.375rem;}
 .l-shopcar-hd{padding: 0.375rem 0.75rem;background-color: #fff;}
 .l-shopcar-list{background: #fff;}
 .l-shopcar-item{padding: 0.75rem 0.75rem;}
-
 .l-shopcar-item h4{line-height: 1.2;margin:0;height: 1.75rem; font-size: 0.8rem;font-weight: 400;}
 .l-shopcar-item .l-thumb{width: 3.25rem;height: 3.25rem;margin-right: 0.5rem;}
 .l-shopcar-item .l-checkbox{width: 2.0rem;margin-left: -0.25rem;}
 .l-shopcar-item .l-checkbox .l-icon-radio{line-height: 3.25rem;}
 .l-shopcar-item-disc{height: 1.5rem; line-height: 1.5rem;}
+.l-shopcar-order-list{background-color: #fff;padding: 0.75rem 0.75rem 0.375rem;}
+.l-shopcar-order-list .l-thumb{width: 3.0rem;height: 3.0rem;border-radius: 3px;margin:0 0.375rem 0.375rem 0; float: left;}
+.l-discount-list{background-color: #fff;}
